manifests/template/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: aicoe-gather-metrics-pipeline
  labels:
    service: aicoe-gather-metrics-pipeline
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: aicoe-gather-metrics-pipeline
    app.kubernetes.io/managed-by: aicoe-thoth-devops
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: aicoe-gather-metrics-pipeline
